--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "eslint-plugin-vue": "^7.0.0",
     "prettier": "^2.2.1",
     "sass": "^1.26.5",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "unplugin-auto-import": "^0.5.3",
+    "unplugin-vue-components": "^0.17.9"
   }
 }
