--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-plus": "^1.2.0-beta.6",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vuedraggable": "^4.1.0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
